<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@color/black"
        android:fontFamily="@string/welcomeMessageFontFamily"
        android:gravity="center_horizontal"
        android:text="@string/welcomeMessage"
        android:textColor="@color/red"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gridImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gridContentDescription"
        android:src="@drawable/grid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/gridImage"
        app:layout_constraintLeft_toLeftOf="@id/gridImage"
        app:layout_constraintRight_toRightOf="@id/gridImage"
        app:layout_constraintTop_toBottomOf="@id/welcome_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/firstGrid"
                android:onClick="gridTap"
                android:padding="20dp"
                android:tag="0" />

            <ImageView
                android:id="@+id/image1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/secondGrid"
                android:onClick="gridTap"
                android:padding="20dp"
                android:tag="1" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/thirdGrid"
                android:onClick="gridTap"
                android:padding="20dp"
                android:tag="2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/fourthGrid"
                android:onClick="gridTap"
                android:padding="20dp"
                android:tag="3" />

            <ImageView
                android:id="@+id/image4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/fifthGrid"
                android:onClick="gridTap"
                android:padding="20dp"
                android:tag="4" />

            <ImageView
                android:id="@+id/image5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/sixthGrid"
                android:onClick="gridTap"
                android:padding="20dp"
                android:tag="5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/seventhGrid"
                android:onClick="gridTap"
                android:padding="20dp"
                android:tag="6" />

            <ImageView
                android:id="@+id/image7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/eighthGrid"
                android:onClick="gridTap"
                android:padding="20dp"
                android:tag="7" />

            <ImageView
                android:id="@+id/image8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/ninthGrid"
                android:onClick="gridTap"
                android:padding="20dp"
                android:tag="8" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/playerStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/playerTurn"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@color/black"
        android:onClick="reset"
        android:text="@string/resetButton"
        android:textColor="@color/red"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/gridImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>